--- a/index.html
+++ b/index.html
@@ -32,19 +32,18 @@
     </div>
     <div class="container navigation">
       <h1>F<span>ortune</span></h1>
-      <div class="navBar">
-        <ul>
-          <li>Home</li>
-          <li>About Us</li>
-          <li>Service</li>
-          <li>Portfolio</li>
-          <li>Dropdown</li>
-          <li>Contact</li>
-        </ul>
-      </div>
+        <nav>
+          <a href="#" class="active">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Service</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Dropdown</a>
+          <a href="#">Contact</a>
+          <a href="#"></a>
+        </nav>
     </div>
   </div>
-  <div class="imageHeader">
+  <div class="inspire">
     <h1>INSPIRE</h1>
     <p>Success is not final; failute is not fatal</p>
     <button type="button" name="button">Get Started</button>
