--- a/index.html
+++ b/index.html
@@ -32,21 +32,46 @@
     </div>
     <div class="container navigation">
       <h1>F<span>ortune</span></h1>
-        <nav>
-          <a href="#" class="active">Home</a>
-          <a href="#">About Us</a>
-          <a href="#">Service</a>
-          <a href="#">Portfolio</a>
-          <a href="#">Dropdown</a>
-          <a href="#">Contact</a>
-          <a href="#"></a>
-        </nav>
+      <nav>
+        <a href="#" class="active">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Service</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Dropdown</a>
+        <a href="#">Contact</a>
+        <a href="#"></a>
+      </nav>
     </div>
   </div>
   <div class="inspire">
     <h1>INSPIRE</h1>
     <p>Success is not final; failute is not fatal</p>
     <button type="button" name="button">Get Started</button>
+  </div>
+  <div class="container welcome">
+    <h1>WELCOME</h1>
+    <hr width="70">
+    <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro
+      consequatur aliquam, incidunt eius magni provident, doloribus omnis minus
+      ovident, doloribus omnis minus temporibus perferendis nesciunt..</p>
+    <div class=" wrapper">
+      <div class="left">
+        <img src="../images/about-img.png" alt="">
+      </div>
+      <div class="right">
+        <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+        <p class="italic">Dolores quae porro consequatur aliquam, incidunt eius magni provident,
+          doloribus omnis minus ovident</p>
+        <p class="regular">Consectetur adipisicing elit. Dolores quae porro consequatur aliquam,
+          incidunt fugiat. Dolores quae porro consequatur aliquam, incidunt fugiat
+          culpa esse aute nulla. malis nulla duis fugiat</p>
+        <ul>
+          <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur aliquam, incidunt fugiat culpa.</li>
+          <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur aliquam, culpa esse aute nulla.</li>
+          <li><i class="far fa-check-circle"></i>Dolores quae porro esse aute nulla. malis nulla duis fugiat</li>
+        </ul>
+      </div>
+    </div>
   </div>
 
 </body>
