--- a/index.html
+++ b/index.html
@@ -76,7 +76,31 @@
     </div>
   </div>
   <div class="container ourService">
-
+    <h1>OUR SERVICES</h1>
+    <hr width="70">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro
+      consequatur aliquam, incidunt fugiat culpa esse aute nulla. malis nulla duis
+      fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+    <div class="row">
+      <div class="column">
+        <img src="images/undraw_maker_launch_crhe.svg" alt="">
+        <h3>marketing</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+          porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+      </div>
+      <div class="column">
+        <img src="images/undraw_mobile_marketing_iqbr.svg" alt="">
+        <h3>marketing</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+          porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+      </div>
+      <div class="column">
+        <img src="images/undraw_scrum_board_cesn.svg" alt="">
+        <h3>marketing</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+          porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+      </div>
+    </div>
   </div>
 
 </body>
