--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         <div class="email">
           <i class="far fa-envelope"></i>
           <span><small>name@websitename.com</small></span>
-        </div>
+        </div> <!-- end of email div -->
         <div class="phone">
           <i class="fas fa-phone"></i>
           <span><small>+1 2345 67855 22</small></span>
-        </div>
-      </div>
+        </div> <!-- end of phone div -->
+      </div> <!-- end of contact div -->
       <div class="socialMedia">
         <span><i class="fab fa-twitter"></i></span>
         <span><i class="fab fa-facebook-f"></i></span>
         <span><i class="fab fa-google-plus-g"></i></span>
         <span><i class="fab fa-linkedin-in"></i></span>
         <span><i class="fab fa-instagram"></i></span>
-      </div>
-    </div>
+      </div> <!-- end of socialMedia div -->
+    </div> <!-- end of contactBar div -->
     <div class="container navigation">
       <h1>F<span>ortune</span></h1>
       <nav>
@@ -44,64 +44,74 @@
         <a href="#"></a>
       </nav>
     </div>
-  </div>
+  </div> <!-- end of navigation div -->
   <div class="inspire">
-    <h1>INSPIRE</h1>
+    <div class="header">INSPIRE</div>
     <p>Success is not final; failute is not fatal</p>
     <button type="button" name="button">Get Started</button>
-  </div>
-  <div class="container welcome">
-    <h1>WELCOME</h1>
-    <hr width="70">
-    <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro
-      consequatur aliquam, incidunt eius magni provident, doloribus omnis minus
-      ovident, doloribus omnis minus temporibus perferendis nesciunt..</p>
-    <div class=" wrapper">
-      <div class="left">
-        <img src="../images/about-img.png" alt="">
+  </div> <!-- end of inspire div -->
+  <div class="container">
+
+    <div class=" welcome">
+      <h1>WELCOME</h1>
+      <hr width="70">
+      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro
+        consequatur aliquam, incidunt eius magni provident, doloribus omnis minus
+        ovident, doloribus omnis minus temporibus perferendis nesciunt..</p>
+      <div class=" wrapper">
+        <div class="left">
+          <img src="../images/about-img.png" alt="">
+        </div>
+        <div class="right">
+          <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+          <p class="italic">Dolores quae porro consequatur aliquam, incidunt eius magni provident,
+            doloribus omnis minus ovident</p>
+          <p class="regular">Consectetur adipisicing elit. Dolores quae porro consequatur aliquam,
+            incidunt fugiat. Dolores quae porro consequatur aliquam, incidunt fugiat
+            culpa esse aute nulla. malis nulla duis fugiat</p>
+          <ul>
+            <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur aliquam, incidunt fugiat culpa.</li>
+            <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur aliquam, culpa esse aute nulla.</li>
+            <li><i class="far fa-check-circle"></i>Dolores quae porro esse aute nulla. malis nulla duis fugiat</li>
+          </ul>
+        </div>
       </div>
-      <div class="right">
-        <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-        <p class="italic">Dolores quae porro consequatur aliquam, incidunt eius magni provident,
-          doloribus omnis minus ovident</p>
-        <p class="regular">Consectetur adipisicing elit. Dolores quae porro consequatur aliquam,
-          incidunt fugiat. Dolores quae porro consequatur aliquam, incidunt fugiat
-          culpa esse aute nulla. malis nulla duis fugiat</p>
-        <ul>
-          <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur aliquam, incidunt fugiat culpa.</li>
-          <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur aliquam, culpa esse aute nulla.</li>
-          <li><i class="far fa-check-circle"></i>Dolores quae porro esse aute nulla. malis nulla duis fugiat</li>
-        </ul>
+    </div> <!-- end of welcome div -->
+
+    <div class="ourService">
+      <h1>OUR SERVICES</h1>
+      <hr width="70">
+      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro
+        consequatur aliquam, incidunt fugiat culpa esse aute nulla. malis nulla duis
+        fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+      <div class="row">
+        <div class="column">
+          <img src="images/undraw_maker_launch_crhe.svg" alt="">
+          <h3>Marketing</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+            porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+        </div>
+        <div class="column">
+          <img src="images/undraw_mobile_marketing_iqbr.svg" alt="">
+          <h3>Consulting</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+            porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+        </div>
+        <div class="column">
+          <img src="images/undraw_scrum_board_cesn.svg" alt="">
+          <h3>Strategy</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+            porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="container ourService">
-    <h1>OUR SERVICES</h1>
-    <hr width="70">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro
-      consequatur aliquam, incidunt fugiat culpa esse aute nulla. malis nulla duis
-      fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
-    <div class="row">
-      <div class="column">
-        <img src="images/undraw_maker_launch_crhe.svg" alt="">
-        <h3>marketing</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
-          porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
-      </div>
-      <div class="column">
-        <img src="images/undraw_mobile_marketing_iqbr.svg" alt="">
-        <h3>marketing</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
-          porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
-      </div>
-      <div class="column">
-        <img src="images/undraw_scrum_board_cesn.svg" alt="">
-        <h3>marketing</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
-          porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
-      </div>
-    </div>
-  </div>
+    </div> <!-- end of ourService div -->
+
+    <div class="clients">
+      <h1>CLIENTS</h1>
+      <hr width="70">
+    </div> <!-- end of clients div -->
+
+  </div> <!-- end of container div -->
 
 </body>
 
