--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -55,9 +56,10 @@
     <div class=" welcome">
       <h1>WELCOME</h1>
       <hr width="70">
-      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro
-        consequatur aliquam, incidunt eius magni provident, doloribus omnis minus
-        ovident, doloribus omnis minus temporibus perferendis nesciunt..</p>
+      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Dolores quae porro consequatur aliquam, incidunt eius magni provident,
+        doloribus omnis minusovident, doloribus omnis minus temporibus perferendis
+        nesciunt..</p>
       <div class=" wrapper">
         <div class="left">
           <img src="../images/about-img.png" alt="">
@@ -66,13 +68,16 @@
           <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
           <p class="italic">Dolores quae porro consequatur aliquam, incidunt eius magni provident,
             doloribus omnis minus ovident</p>
-          <p class="regular">Consectetur adipisicing elit. Dolores quae porro consequatur aliquam,
-            incidunt fugiat. Dolores quae porro consequatur aliquam, incidunt fugiat
-            culpa esse aute nulla. malis nulla duis fugiat</p>
+          <p class="regular">Consectetur adipisicing elit. Dolores quae porro
+            consequatur aliquam, incidunt fugiat. Dolores quae porro consequatur aliquam,
+            incidunt fugiat culpa esse aute nulla. malis nulla duis fugiat</p>
           <ul>
-            <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur aliquam, incidunt fugiat culpa.</li>
-            <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur aliquam, culpa esse aute nulla.</li>
-            <li><i class="far fa-check-circle"></i>Dolores quae porro esse aute nulla. malis nulla duis fugiat</li>
+            <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur
+              aliquam, incidunt fugiat culpa.</li>
+            <li><i class="far fa-check-circle"></i>Dolores quae porro consequatur
+              aliquam, culpa esse aute nulla.</li>
+            <li><i class="far fa-check-circle"></i>Dolores quae porro esse aute nulla.
+              malis nulla duis fugiat</li>
           </ul>
         </div>
       </div>
@@ -109,10 +114,24 @@
     <div class="clients">
       <h1>CLIENTS</h1>
       <hr width="70">
+      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.
+        duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+      <div class="clients-slider">
+        <img src="images/clients/client-1.png" alt="">
+        <img src="images/clients/client-2.png" alt="">
+        <img src="images/clients/client-3.png" alt="">
+        <img src="images/clients/client-4.png" alt="">
+        <img src="images/clients/client-5.png" alt="">
+        <img src="images/clients/client-6.png" alt="">
+      </div> <!-- end of clients-slider div -->
+
     </div> <!-- end of clients div -->
 
   </div> <!-- end of container div -->
-
+  <script type="text/javascript" src="slick.min.js"></script>
+  <script type="text/javascript" src="jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="function.js"></script>
 </body>
 
 </html>
