--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
   </div> <!-- end of navigation div -->
   <div class="inspire">
-    <div class="header">INSPIRE bla</div>
+    <div class="header">INSPIRE</div>
     <p>Success is not final; failute is not fatal</p>
     <button type="button" name="button">Get Started</button>
   </div> <!-- end of inspire div -->
