--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </div> <!-- end of phone div -->
       </div> <!-- end of contact div -->
       <div class="socialMedia">
-        <span><i class="fab fa-twitter"></i></span>
-        <span><i class="fab fa-facebook-f"></i></span>
-        <span><i class="fab fa-google-plus-g"></i></span>
-        <span><i class="fab fa-linkedin-in"></i></span>
-        <span><i class="fab fa-instagram"></i></span>
+        <span><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></span>
+        <span><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></span>
+        <span><a href="https://plus.google.com/"><i class="fab fa-google-plus-g"></i></a></span>
+        <span><a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a></span>
+        <span><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></span>
       </div> <!-- end of socialMedia div -->
     </div> <!-- end of contactBar div -->
     <div class="container navigation">
@@ -52,7 +52,6 @@
     <button type="button" name="button">Get Started</button>
   </div> <!-- end of inspire div -->
   <div class="container">
-
     <div class=" welcome">
       <h1>WELCOME</h1>
       <hr width="70">
@@ -82,7 +81,6 @@
         </div>
       </div>
     </div> <!-- end of welcome div -->
-
     <div class="ourService">
       <h1>OUR SERVICES</h1>
       <hr width="70">
@@ -110,7 +108,6 @@
         </div>
       </div>
     </div> <!-- end of ourService div -->
-
     <div class="clients">
       <h1>CLIENTS</h1>
       <hr width="70">
@@ -124,14 +121,76 @@
         <img src="images/clients/client-4.png" alt="">
         <img src="images/clients/client-5.png" alt="">
         <img src="images/clients/client-6.png" alt="">
+        <img src="images/clients/client-1.png" alt="">
+        <img src="images/clients/client-2.png" alt="">
+        <img src="images/clients/client-3.png" alt="">
+        <img src="images/clients/client-4.png" alt="">
+        <img src="images/clients/client-5.png" alt="">
+        <img src="images/clients/client-6.png" alt="">
       </div> <!-- end of clients-slider div -->
-
     </div> <!-- end of clients div -->
+    <div class="testimonials">
+      <h1>TESTIMONIALS</h1>
+      <hr width="70">
+      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.
+        duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+      <div class="testimonials-slider">
 
+          <div class="column">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+            ipsum velit export irure minim illum fore</p>
+            <h3>Mario James</h3>
+            <p class="job-title">CEO & Founder</p>
+          </div> <!-- end of column div -->
+          <div class="column">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+            ipsum velit export irure minim illum fore</p>
+            <h3>Finton Gofnes</h3>
+              <p>CTO</p>
+          </div> <!-- end of column div -->
+          <div class="column">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+            ipsum velit export irure minim illum fore</p>
+            <h3>Marcus Kell</h3>
+            <p>Marketing</p>
+          </div> <!-- end of column div -->
+          <div class="column">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+            ipsum velit export irure minim illum fore</p>
+            <h3>Williams Belly</h3>
+            <p>Accounts</p>
+          </div> <!-- end of column div -->
+          <div class="column">
+            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+            culpa esse aute nulla. Duis fugiat culpa esse aute nulla
+            ipsum velit export irure minim illum fore</p>
+            <h3>Larry Hanson</h3>
+            <p>Investor</p>
+          </div> <!-- end of column div -->
+
+      </div> <!-- end of testimonials-slider div -->
+    </div> <!-- end of testimonials div -->
+    <div class="get">
+      <h2>Get Our Service</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+        porro consequatur aliquam, incidunt fugiat culpa esse aute nulla cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <button type="button" name="button">Contact Us</button>
+    </div> <!-- end of get div -->
+    <div class="footer">
+      © Copyright Fortune. All Rights Reserved
+      Template by WebThemez
+      <button type="button" name="button"><i class="fas fa-chevron-up"></i></button>
+    </div> <!-- en of footer div -->
   </div> <!-- end of container div -->
-  <script type="text/javascript" src="slick.min.js"></script>
-  <script type="text/javascript" src="jquery-3.3.1.js"></script>
-  <script type="text/javascript" src="function.js"></script>
+  <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="js/slick.min.js"></script>
+  <script type="text/javascript" src="js/function.js"></script>
 </body>
 
 </html>
