--- a/index.html
+++ b/index.html
@@ -137,41 +137,41 @@
         duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
       <div class="testimonials-slider">
 
-          <div class="column">
-            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+        <div class="column">
+          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
-            <h3>Mario James</h3>
-            <p class="job-title">CEO & Founder</p>
-          </div> <!-- end of column div -->
-          <div class="column">
-            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+          <h3>Mario James</h3>
+          <p class="job-title">CEO & Founder</p>
+        </div> <!-- end of column div -->
+        <div class="column">
+          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
-            <h3>Finton Gofnes</h3>
-              <p>CTO</p>
-          </div> <!-- end of column div -->
-          <div class="column">
-            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+          <h3>Finton Gofnes</h3>
+          <p class="job-title">CTO</p>
+        </div> <!-- end of column div -->
+        <div class="column">
+          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
-            <h3>Marcus Kell</h3>
-            <p>Marketing</p>
-          </div> <!-- end of column div -->
-          <div class="column">
-            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+          <h3>Marcus Kell</h3>
+          <p class="job-title">Marketing</p>
+        </div> <!-- end of column div -->
+        <div class="column">
+          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
-            <h3>Williams Belly</h3>
-            <p>Accounts</p>
-          </div> <!-- end of column div -->
-          <div class="column">
-            <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
+          <h3>Williams Belly</h3>
+          <p class="job-title">Accounts</p>
+        </div> <!-- end of column div -->
+        <div class="column">
+          <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
-            <h3>Larry Hanson</h3>
-            <p>Investor</p>
-          </div> <!-- end of column div -->
+          <h3>Larry Hanson</h3>
+          <p class="job-title">Investor</p>
+        </div> <!-- end of column div -->
 
       </div> <!-- end of testimonials-slider div -->
     </div> <!-- end of testimonials div -->
@@ -180,7 +180,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
         porro consequatur aliquam, incidunt fugiat culpa esse aute nulla cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button type="button" name="button">Contact Us</button>
+      <button type="button" name="button">Contact Us</button>
     </div> <!-- end of get div -->
     <div class="footer">
       © Copyright Fortune. All Rights Reserved
