--- a/index.html
+++ b/index.html
@@ -137,35 +137,35 @@
         duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
       <div class="testimonials-slider">
 
-        <div class="column">
+        <div class="testimonials-item">
           <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
           <h3>Mario James</h3>
           <p class="job-title">CEO & Founder</p>
         </div> <!-- end of column div -->
-        <div class="column">
+        <div class="testimonials-item">
           <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
           <h3>Finton Gofnes</h3>
           <p class="job-title">CTO</p>
         </div> <!-- end of column div -->
-        <div class="column">
+        <div class="testimonials-item">
           <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
           <h3>Marcus Kell</h3>
           <p class="job-title">Marketing</p>
         </div> <!-- end of column div -->
-        <div class="column">
+        <div class="testimonials-item">
           <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
           <h3>Williams Belly</h3>
           <p class="job-title">Accounts</p>
         </div> <!-- end of column div -->
-        <div class="column">
+        <div class="testimonials-item">
           <p class="text">Dolores quae parro consequatur aliquam, incidunt fugiat
             culpa esse aute nulla. Duis fugiat culpa esse aute nulla
             ipsum velit export irure minim illum fore</p>
@@ -175,19 +175,23 @@
 
       </div> <!-- end of testimonials-slider div -->
     </div> <!-- end of testimonials div -->
-    <div class="get">
-      <h2>Get Our Service</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
-        porro consequatur aliquam, incidunt fugiat culpa esse aute nulla cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <button type="button" name="button">Contact Us</button>
-    </div> <!-- end of get div -->
-    <div class="footer">
-      © Copyright Fortune. All Rights Reserved
-      Template by WebThemez
-      <button type="button" name="button"><i class="fas fa-chevron-up"></i></button>
-    </div> <!-- en of footer div -->
   </div> <!-- end of container div -->
+  <div class="get">
+    <div class="container">
+      <h2>Get Our Service</h2>
+      <div class="wrap">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+          porro consequatur aliquam, incidunt fugiat culpa esse aute nulla cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <button type="button" name="button">Contact Us</button>
+      </div>
+    </div> <!-- end of container div -->
+  </div> <!-- end of get div -->
+  <div class="footer">
+    © Copyright Fortune. All Rights Reserved
+    Template by WebThemez
+    <button type="button" name="button"><i class="fas fa-chevron-up"></i></button>
+  </div> <!-- en of footer div -->
   <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="js/slick.min.js"></script>
   <script type="text/javascript" src="js/function.js"></script>
