--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         nesciunt..</p>
       <div class=" wrapper">
         <div class="left">
-          <img src="../images/about-img.png" alt="">
+          <img src="images/about-img.png" alt="">
         </div>
         <div class="right">
           <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
