--- a/index.html
+++ b/index.html
@@ -96,19 +96,25 @@
         fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
       <div class="row">
         <div class="column">
-          <img src="images/undraw_maker_launch_crhe.svg" alt="">
+          <div class="image">
+            <img src="images/undraw_maker_launch_crhe.svg" alt="">
+          </div>
           <h3>Marketing</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
             porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
         </div>
         <div class="column">
-          <img src="images/undraw_mobile_marketing_iqbr.svg" alt="">
+          <div class="image">
+            <img src="images/undraw_mobile_marketing_iqbr.svg" alt="">
+          </div>
           <h3>Consulting</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
             porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
         </div>
         <div class="column">
-          <img src="images/undraw_scrum_board_cesn.svg" alt="">
+          <div class="image">
+            <img src="images/undraw_scrum_board_cesn.svg" alt="">
+          </div>
           <h3>Strategy</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
             porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
