--- a/index.html
+++ b/index.html
@@ -193,10 +193,14 @@
     <div class="container">
       <h2>Get Our Service</h2>
       <div class="wrap">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
-          porro consequatur aliquam, incidunt fugiat culpa esse aute nulla cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button type="button" name="button">Contact Us</button>
+        <div class="text">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae
+            porro consequatur aliquam, incidunt fugiat culpa esse aute nulla cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="btn">
+          <button type="button" name="button">Contact Us</button>
+        </div>
       </div>
     </div> <!-- end of container div -->
   </div> <!-- end of get div -->
