--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Fortune</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -205,10 +205,16 @@
     </div> <!-- end of container div -->
   </div> <!-- end of get div -->
   <div class="footer">
-    © Copyright Fortune. All Rights Reserved
-    Template by WebThemez
-    <button type="button" name="button"><i class="fas fa-chevron-up"></i></button>
+    <div class="copyright">
+      &copy Copyright <span>Fortune</span>. All Rights Reserved
+    </div>
+    <div class="template">
+      Template by <a href="#">WebThemez</a>
+    </div>
   </div> <!-- en of footer div -->
+  <div class="btn-bottom">
+    <button type="button" name="button"><i class="fas fa-chevron-up"></i></button>
+  </div>
   <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="js/slick.min.js"></script>
   <script type="text/javascript" src="js/function.js"></script>
